--- a/app/views/notifier/user_reset_password_verification.html.erb
+++ b/app/views/notifier/user_reset_password_verification.html.erb
@@ -1,10 +1,14 @@
 <!CTYPE html>
+<% if I18n.locale == :en %>
 <html>
+<% else %>
+<html DIR = "RTL">
+<% end %>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h5><%= I18n.t(:dear_msg, :name=> @user.username) %></h1>
+    <h5><%= I18n.t(:dear_msg, :name=> @user.username) %></h5>
     <p><%= I18n.t('notifier.user_recover_account.message') %></p>
     <p><%= link_to "#{@reset_password_url}", @reset_password_url  %></p>
    <br/>
