--- a/app/views/notifier/user_verification.html.erb
+++ b/app/views/notifier/user_verification.html.erb
@@ -1,5 +1,9 @@
 <!CTYPE html>
+<% if I18n.locale == :en %>
 <html>
+<% else %>
+<html DIR = "RTL">
+<% end %>
   <head>
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
