fixing design issues

--- a/app/assets/stylesheets/main_ar.sass
+++ b/app/assets/stylesheets/main_ar.sass
@@ -35,9 +35,9 @@ h1, h2, h3, h4
   padding: 15px
 
 .signin
-  font-size: 10px
+  font-size: 13px
   padding: 10px 5px 5px 5px
-  margin: 20px -15px 20px 0px
+  margin: 20px auto
   text-align: center
   height: 65px
 
@@ -305,7 +305,7 @@ a
       color: #ba8fba
 
 .activity-log
-  line-height: 11px
+  line-height: inherit
 
 .annotation
   h4
@@ -659,3 +659,17 @@ fieldset
 
 .no-padding 
   padding: 0
+
+.direction li 
+  list-style: none
+  direction: ltr
+  text-align: right
+  
+.hierarchy_id 
+  direction: ltr
+  text-align: right
+  
+.ba-logo
+  img
+    height: 50px
+    text-align: left
