--- a/app/assets/stylesheets/main_en.sass
+++ b/app/assets/stylesheets/main_en.sass
@@ -26,17 +26,23 @@ h1, h2, h3, h4
   padding: 15px
   
 .language 
-  padding: 20px 15px 15px 15px
+  padding: 20px 5px
   margin: 20px 0px
   text-align: center
   height: 65px
   margin-left: -2px
   
 .signin
-  padding: 10px
+  padding: 15px 10px
   margin: 20px 0px
   text-align: center
+  display: block
+  width: 100%
+  float: left
 
+.no-padding 
+  padding: 0
+  
 .topsearch
   padding: 15px 10px
   margin: 20px 0px
@@ -302,7 +308,7 @@ a
       color: #ba8fba
 
 .activity-log
-  line-height: 11px
+  line-height: inherit
 
 .annotation
   h4
@@ -655,3 +661,11 @@ fieldset
     min-height: 140px
 .no-padding 
   padding: 0
+
+.direction li 
+  list-style: none
+  
+.ba-logo
+  img
+    height: 50px
+    text-align: right
