--- a/app/views/browse/show.html.haml
+++ b/app/views/browse/show.html.haml
@@ -15,7 +15,7 @@
             %h3.panel-title
               =prefix.upcase
           .panel-body       
-            %ul    
+            %ul.direction    
               - filter_list_by_prefix(@browse_list, prefix).each do |item|    
                 %li
                   =link_to books_path(:params => addFacetSearch({}, @search_prefix, item[:name].html_safe.gsub("]", "").gsub("[", ""))) do
