--- a/app/views/users/_activity.html.haml
+++ b/app/views/users/_activity.html.haml
@@ -31,7 +31,7 @@
         %hr
     %div
       .pagination-centered
-        = will_paginate @log_records, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+        = will_paginate @log_records
 - else
   %h4
     = I18n.t(:profile_no_activities_found)           
