--- a/app/views/activities/index.html.haml
+++ b/app/views/activities/index.html.haml
@@ -36,4 +36,4 @@
             %hr
       %div
         .pagination-centered
-          = will_paginate @activities, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+          = will_paginate @activities
