--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -52,4 +52,4 @@
     
   %div
     .pagination-centered
-      = will_paginate @collections, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+      = will_paginate @collections
