--- a/app/views/users/_annotations.html.haml
+++ b/app/views/users/_annotations.html.haml
@@ -69,7 +69,7 @@
                   %hr
     %div
       .pagination-centered
-        = will_paginate @annotation, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+        = will_paginate @annotation
           
 - else
   %h4
