--- a/app/views/users/_history.html.haml
+++ b/app/views/users/_history.html.haml
@@ -67,7 +67,7 @@
       %hr
     %div
       .pagination-centered
-        = will_paginate @history, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+        = will_paginate @history
 - else
   %h4
     = I18n.t(:profile_no_history_found)            
