--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -19,7 +19,7 @@
               = I18n.t(:delete)    
     %div
       .pagination-centered
-        = will_paginate @queries, :previous_label => I18n.t(:previous_label), :next_label => I18n.t(:next_label)
+        = will_paginate @queries
 - else
   %h4
     = I18n.t(:profile_no_queries_found)          
