--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -35,6 +35,7 @@
     = javascript_include_tag 'jquery/jquery.ui.position.js'
     = javascript_include_tag 'jquery/jquery.ui.menu.js'
     = javascript_include_tag 'jquery/jquery.ui.autocomplete.js'
+    = yield :head
     
   :css
     .ui-autocomplete-loading
