--- a/app/views/collections/edit.html.haml
+++ b/app/views/collections/edit.html.haml
@@ -27,7 +27,7 @@
   .col-md-9.column.col-xs-offset-1
     %fieldset
       %legend
-        = @page_title
+        = I18n.t(:edit_collection_page_title)
       .form-horizontal
         = validation_errors_for(@collection)
         = form_for @collection, :builder => FormHelper::BHLFormBuilder ,:html => {:onsubmit => "return check_image_size();" } do |f|
@@ -63,5 +63,3 @@
             .col-sm-10
               = f.submit I18n.t('edit_collection'), :class => "btn btn-default", :id => "submit"
               = f.submit I18n.t('clear_button'), :class => "btn btn-default", :type => "reset"
-
-     
