--- a/app/views/collections/index.html.haml
+++ b/app/views/collections/index.html.haml
@@ -1,3 +1,4 @@
+= javascript_include_tag 'collections.js'
 :javascript  
   $(document).ready(function() {
     var cache;
@@ -13,42 +14,29 @@
         }
         searchfield = $("#search_coll_field").val();
         return $.getJSON("/collectionautocomplete?term=" + term, request, function(data, status, xhr) {
-          return response(data);
+          return response(data);3./rs
         });
       }
     });
   });
   
-  function search_collection(){
-    field = $("#search_coll_field").val();
-    if (field == ''){
-      alert("#{I18n.t(:empty_search_query_warn)}");
-      return;
-    }
-    if ([' ',  '!', '@', '#', '$' , '^', '&', '*', '(',  ',',  ')', '_',  '+', '-', '=' , '&'].indexOf(field) >= 0 || field.indexOf("%") >= 0) {
-      alert("#{I18n.t(:invalid_input)}");
-      return;
-    }
-    else{
-      window.location=window.location.href.split('?')[0] + "?search=" + field;
-    }
-  }
+  
 .row.clearfix
   .col-md-12.column
     .col-md-12
       %h2
-        =@page_title
+        = I18n.t(:collection_title)
       .col-md-8
-        =render :partial => "collections/breadcrumb"
+        =render partial: "collections/breadcrumb"
       .input-group.col-md-4.pull-right
-        %input.form-control{:id => "search_coll_field", :type=> "text", :onkeypress => "if(event.keyCode == 13){search_collection();return false;}"}
+        %input.form-control{ id: "search_coll_field", type: "text", onkeypress: "if(event.keyCode == 13){search_collection('search_coll_field', '#{I18n.t(:empty_search_query_warn)}');return false;}" }
         %span.input-group-btn
-          %a.go.pull-left.rotate{:style => "cursor:pointer;"}
-            %i.fa.fa-arrow-circle-right.fa-2x{:onclick => "search_collection();"}
+          %a.go.pull-left.rotate{ style: "cursor:pointer;" }
+            %i.fa.fa-arrow-circle-right.fa-2x{ onclick: "search_collection('search_coll_field', '#{I18n.t(:empty_search_query_warn)}');" }
     .clearfix
     %hr      
   .row
-    =render :partial=> "collections/listresult"
+    =render partial: "collections/listresult"
     
   %div
     .pagination-centered
