--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -3,7 +3,7 @@
   = javascript_include_tag 'jquery/jquery.tooltipster.min'
   = stylesheet_link_tag 'jquery/rating/jRating.jquery.css'
   = javascript_include_tag 'jquery/rating/jRating.jquery.js'
-  = javascript_include_tag "user_page"
+  = javascript_include_tag "user_page.js"
 :javascript
   $(document).ready(function() {
     gettabclass("#{@tab}");
