--- a/app/views/comments/_new_comment.html.haml
+++ b/app/views/comments/_new_comment.html.haml
@@ -2,7 +2,8 @@
   = validation_errors_for(@comment)
   = f.text_area :text , :class => "form-control" , :rows => 2, :id => "commnettext#{comment_id}"
   = f.hidden_field :volume_id, value: @volume_id
-  = f.hidden_field :collection_id, value: @collection_id
+  - collection_id = @collection.nil? ? nil : @collection.id
+  = f.hidden_field :collection_id, value: collection_id
   = f.hidden_field :user_id, value: session[:user_id]
   = f.hidden_field :comment_id, value: comment_id
   %br
