--- a/app/views/users/_queries.html.haml
+++ b/app/views/users/_queries.html.haml
@@ -14,7 +14,7 @@
             %span.badge
               %a{ href: "/books?#{query.string}" }
                 = "#{I18n.t(:user_queries_books_found)} #{get_number_of_returned_books(query.string)}"
-            %a{:href => "/user_search_history/delete_query/#{query.id}", :onclick => "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");"}
+            %a{ href: "/user_search_history/delete_query/#{query.id}", onclick: "return confirmDelete(\"#{I18n.t(:delete_saved_query_confirm)}\");" }
               %i.fa.fa-times-circle
                 = I18n.t(:delete)
     %div
