Fix failed controller specs & updating environment.sample

--- a/app/views/users/reset_password.html.haml
+++ b/app/views/users/reset_password.html.haml
@@ -5,7 +5,7 @@
     = validation_errors_for(@user)
     %ul
       %li
-        = f.label :password, raw(t('password')) :class => 'required'
+        = f.label :password, raw(t('password')), :class => 'required'
       %li
         = f.password_field :entered_password, :maxlength => 16
       %li
